--- a/analysis/prediction_model.ipynb
+++ b/analysis/prediction_model.ipynb
@@ -6,6 +6,7 @@
    "outputs": [],
    "source": [
     "from load_data import load\n",
+    "from elo import get_elo\n",
     "results, odds, player_details, player_stats = load()"
    ],
    "metadata": {
